src/test/deca/syntax/parser/invalid/cast_int_to_reserved_word.deca
// Test parser, cast de int to reserved word

{
    int x = 5;
    (null) (x);
}